--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,7 +1,17 @@
 <div class="container">
-  <div class="text-center">
-    <h1>Organization</h1>
-  </div>
+    <div class="row">
+      <div class="col-sm-5">
+      </div>
+      <div class="col-sm-3">
+        <h1>Organization</h1>
+      </div>
+      <div class="col-sm-1">
+        <%= link_to(new_organization_path, class: 'h1') do %>
+          <i class="fas fa-plus"></i>
+          <% end %>
+      </div>
+    </div>
+
   <%= render 'organizations/sort_list' %>
   <ul class="list-group list-group-flush my-5" id="organization-list">
     <%= render 'organizations/card'%>
