Add image to index

--- a/app/views/organizations/_card.html.erb
+++ b/app/views/organizations/_card.html.erb
@@ -2,7 +2,7 @@
   <li class="list-group-item">
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag('ela.png', widht: '50', height: '90') %>
+        <%= image_tag organization.image.content.url, widht: '50', height: '90' %>
       </div>
       <div class="col-md-6">
         <div class="text-center">
