--- a/app/views/organizations/_sort_list.html.erb
+++ b/app/views/organizations/_sort_list.html.erb
@@ -10,10 +10,10 @@
           <a class="dropdown-item dropdown-toggle" href="#">Name</a>
           <ul class="dropdown-menu">
             <li>
-              <%= link_to 'Ascending' , organizations_sortable_path({keyword: 'wordsA'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▲' , organizations_sortable_path({keyword: 'wordsA'}), class: 'dropdown-item', remote: true %>
             </li>
             <li>
-              <%= link_to 'Descending' , organizations_sortable_path({keyword: 'wordsZ'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▼' , organizations_sortable_path({keyword: 'wordsZ'}), class: 'dropdown-item', remote: true %>
             </li>
           </ul>
         </li>
@@ -21,10 +21,10 @@
           <a class="dropdown-item dropdown-toggle" href="#">Count of members</a>
           <ul class="dropdown-menu">
             <li>
-              <%= link_to 'Ascending' , organizations_sortable_path({keyword: 'membersUp'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▲' , organizations_sortable_path({keyword: 'membersUp'}), class: 'dropdown-item', remote: true %>
             </li>
             <li>
-              <%= link_to 'Descending' , organizations_sortable_path({keyword: 'membersDown'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▼' , organizations_sortable_path({keyword: 'membersDown'}), class: 'dropdown-item', remote: true %>
             </li>
           </ul>
         </li>
@@ -32,10 +32,10 @@
           <a class="dropdown-item dropdown-toggle" href="#">Count of courses</a>
           <ul class="dropdown-menu">
             <li>
-              <%= link_to 'Ascending' , organizations_sortable_path({keyword: 'courseUp'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▲' , organizations_sortable_path({keyword: 'courseUp'}), class: 'dropdown-item', remote: true %>
             </li>
             <li>
-              <%= link_to 'Descending' , organizations_sortable_path({keyword: 'courseDown'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▼' , organizations_sortable_path({keyword: 'courseDown'}), class: 'dropdown-item', remote: true %>
             </li>
           </ul>
         </li>
@@ -43,10 +43,10 @@
           <a class="dropdown-item dropdown-toggle" href="#">Created</a>
           <ul class="dropdown-menu">
             <li>
-              <%= link_to 'Ascending' , organizations_sortable_path({keyword: 'new'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▲' , organizations_sortable_path({keyword: 'new'}), class: 'dropdown-item', remote: true %>
             </li>
             <li>
-              <%= link_to 'Descending' , organizations_sortable_path({keyword: 'old'}), class: 'dropdown-item', remote: true %>
+              <%= link_to '▼' , organizations_sortable_path({keyword: 'old'}), class: 'dropdown-item', remote: true %>
             </li>
           </ul>
         </li>
