--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "user_dashboard";
 @import "select2";
 @import "select2-bootstrap";
+@import "organizations";
 
 #link_on {
   color: inherit;
