--- a/app/views/organizations/_sort_list.html.erb
+++ b/app/views/organizations/_sort_list.html.erb
@@ -9,45 +9,29 @@
         <li class="dropdown-submenu">
           <a class="dropdown-item dropdown-toggle" href="#">Name</a>
           <ul class="dropdown-menu">
-            <li>
-              <%= link_to '▲' , organizations_sortable_path({keyword: 'wordsA'}), class: 'dropdown-item', remote: true %>
-            </li>
-            <li>
-              <%= link_to '▼' , organizations_sortable_path({keyword: 'wordsZ'}), class: 'dropdown-item', remote: true %>
-            </li>
+              <%= render '/organizations/choice-link-up', path: organizations_sortable_path({keyword: 'wordsA'}) %>
+              <%= render '/organizations/choice-link-down', path: organizations_sortable_path({keyword: 'wordsZ'}) %>
           </ul>
         </li>
         <li class="dropdown-submenu">
           <a class="dropdown-item dropdown-toggle" href="#">Count of members</a>
           <ul class="dropdown-menu">
-            <li>
-              <%= link_to '▲' , organizations_sortable_path({keyword: 'membersUp'}), class: 'dropdown-item', remote: true %>
-            </li>
-            <li>
-              <%= link_to '▼' , organizations_sortable_path({keyword: 'membersDown'}), class: 'dropdown-item', remote: true %>
-            </li>
+              <%= render '/organizations/choice-link-up', path: organizations_sortable_path({keyword: 'membersUp'}) %>
+              <%= render '/organizations/choice-link-down', path: organizations_sortable_path({keyword: 'membersDown'}) %>
           </ul>
         </li>
         <li class="dropdown-submenu">
           <a class="dropdown-item dropdown-toggle" href="#">Count of courses</a>
           <ul class="dropdown-menu">
-            <li>
-              <%= link_to '▲' , organizations_sortable_path({keyword: 'courseUp'}), class: 'dropdown-item', remote: true %>
-            </li>
-            <li>
-              <%= link_to '▼' , organizations_sortable_path({keyword: 'courseDown'}), class: 'dropdown-item', remote: true %>
-            </li>
+              <%= render '/organizations/choice-link-up', path: organizations_sortable_path({keyword: 'courseUp'}) %>
+              <%= render '/organizations/choice-link-down', path: organizations_sortable_path({keyword: 'courseDown'}) %>
           </ul>
         </li>
         <li class="dropdown-submenu">
           <a class="dropdown-item dropdown-toggle" href="#">Created</a>
           <ul class="dropdown-menu">
-            <li>
-              <%= link_to '▲' , organizations_sortable_path({keyword: 'new'}), class: 'dropdown-item', remote: true %>
-            </li>
-            <li>
-              <%= link_to '▼' , organizations_sortable_path({keyword: 'old'}), class: 'dropdown-item', remote: true %>
-            </li>
+            <%= render '/organizations/choice-link-up', path: organizations_sortable_path({keyword: 'new'}) %>
+            <%= render '/organizations/choice-link-down', path: organizations_sortable_path({keyword: 'old'}) %>
           </ul>
         </li>
       </div>
@@ -57,38 +41,15 @@
 
 <script>
 $('.dropdown-menu a.dropdown-toggle').on('click', function(e) {
+  var $subMenu;
   if (!$(this).next().hasClass('show')) {
-    $(this).parents('.dropdown-menu').first().find('.show').removeClass("show");
+    $(this).parents('.dropdown-menu').first().find('.show').removeClass('show');
   }
-  var $subMenu = $(this).next(".dropdown-menu");
+  $subMenu = $(this).next('.dropdown-menu');
   $subMenu.toggleClass('show');
-
-
   $(this).parents('li.nav-item.dropdown.show').on('hidden.bs.dropdown', function(e) {
-    $('.dropdown-submenu .show').removeClass("show");
+    $('.dropdown-submenu .show').removeClass('show');
   });
-
-
   return false;
 });
 </script>
-
-<style>
-.dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu a::after {
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 6px;
-  top: .8em;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-left: .1rem;
-  margin-right: .1rem;
-}
-</style>
