--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,6 +4,11 @@
       <div class="content-wrapper">
         <%= render inline: @page.html %>
       </div>
+
+      <div class="test-display">
+        <%= render partial: 'pages/test', locals: { questions: @questions, answers: @answers } %>
+      </div>
+
       <div class="navigation-buttons">
         <% if @page.previous_page %>
           <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
