--- a/app/views/pages/_test.html.erb
+++ b/app/views/pages/_test.html.erb
@@ -1,14 +1,14 @@
-<%= form_tag @page.next_page.nil? ? course_path(@course) : page_course_path(@course, @page.next_page), method: :get do %>
+<%= form_tag store_answers_course_path(@course), method: :post, remote: true do %>
   <% questions.each_with_index do |question, index| %>
     <%= render inline: render_question(question, answers[index]) %>
   <% end %>
-
-  <div class="navigation-buttons">
-    <% if @page.previous_page %>
-      <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
-    <% end %>
-    <% if @page.next_page %>
-      <%= submit_tag 'Next page', class: 'btn btn-md btn-primary float-right' %>
-    <% end %>
-  </div>
+  <%= submit_tag('Save answers', class: 'btn btn-md btn-success') %>
 <% end %>
+<div class="navigation-buttons">
+  <% if @page.previous_page %>
+    <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
+  <% end %>
+  <% if @page.next_page %>
+    <%= link_to 'Next page', pages_course_path(@course, @page.next_page), class: 'btn btn-md btn-primary float-right' %>
+  <% end %>
+</div>
