--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,9 +6,10 @@
       </div>
 
       <div class="test-display">
-        <%= render partial: 'pages/test', locals: { questions: @questions, answers: @answers } %>
+        <%= render partial: 'pages/test', locals: { questions: @questions, answers: @answers, user_answers: @user_answers } %>
       </div>
 
+      <% console %>
     </div>
   </div>
 </div>
