--- a/app/views/pages/_test.html.erb
+++ b/app/views/pages/_test.html.erb
@@ -1,8 +1,10 @@
 <% unless questions.empty? %>
   <%= form_tag store_answers_course_path(@course), method: :post, remote: true do %>
     <div class="form-group">
-      <% questions.each_with_index do |question, index| %>
-        <%= render inline: render_question(question, answers[index], user_answers[index]) %>
+      <% questions.each do |question| %>
+        <%- answers = question.answer_list %>
+        <%- user_answers = question.user_answers.find_by(user: current_user) %>
+        <%= render inline: render_question(question, answers, user_answers) %>
       <% end %>
     </div>
     <div class="form-actions">
@@ -14,7 +16,7 @@
   <% if @page.previous_page %>
     <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
   <% end %>
-  <% if user_answers.size == questions.size && @page.next_page %>
+  <% if @page.next_page %>
     <%= link_to 'Next page', page_course_path(@course, @page.next_page), class: 'btn btn-md btn-primary float-right' %>
   <% end %>
 </div>
