Added a method to Page model to check if user had answers on each question on page in one query. Disabled rendering of "Save answers" and "Next page" buttons until user answers all the questions. Updated page policy.

--- a/app/views/pages/_test.html.erb
+++ b/app/views/pages/_test.html.erb
@@ -1,3 +1,4 @@
+<%- all_answered = @page.all_questions_answered_by?(current_user) %>
 <% unless questions.empty? %>
   <%= form_tag store_answers_course_path(@course), method: :post, remote: true do %>
     <div class="form-group">
@@ -8,7 +9,7 @@
       <% end %>
     </div>
     <div class="form-actions">
-      <%= submit_tag('Save answers', class: 'btn btn-md btn-success', id: 'submit-answers-button') %>
+      <%= submit_tag('Save answers', class: 'btn btn-md btn-success', id: 'submit-answers-button') unless all_answered %>
     </div>
   <% end %>
 <% end %>
@@ -16,7 +17,7 @@
   <% if @page.previous_page %>
     <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
   <% end %>
-  <% if @page.next_page %>
+  <% if all_answered && @page.next_page %>
     <%= link_to 'Next page', page_course_path(@course, @page.next_page), class: 'btn btn-md btn-primary float-right' %>
   <% end %>
 </div>
