--- a/app/views/pages/_test.html.erb
+++ b/app/views/pages/_test.html.erb
@@ -1,8 +1,8 @@
 <%- all_answered = @page.all_questions_answered_by?(current_user) %>
 <% unless questions.empty? %>
-  <%= form_tag store_answers_course_path(@course), method: :post, remote: true do %>
+  <%= form_tag store_answers_course_path(@course, @page), method: :post, remote: true do %>
     <div class="form-group">
-      <% questions.each do |question| %>
+      <% questions.includes(:answer_list).each do |question| %>
         <%- answers = question.answer_list %>
         <%- user_answers = question.user_answers.find_by(user: current_user) %>
         <%= render inline: render_question(question, answers, user_answers) %>
