--- a/app/views/questions/_radio_question_fields.html.erb
+++ b/app/views/questions/_radio_question_fields.html.erb
@@ -2,6 +2,6 @@
   <input name="questions[][content]" value="question content">
   <div class="answers"></div>
   <p class="btn btn-outline-danger add-answer" type="radio" id="add-answer">Add answer</p>
-  <input name="questions[][question_type]" style="display: none" value="0">
+  <input name="questions[][question_type]" style="display: none" value="radio">
   <input id="index" style="display: none" value="0">
 </div>
