--- a/app/views/questions/_textbox_question_fields.html.erb
+++ b/app/views/questions/_textbox_question_fields.html.erb
@@ -4,5 +4,5 @@
     <input type="text" name="answer_list[][answers][0]" value="this is a textbox question" style="display: none">
     <input type="text" name="answer_list[][correct_answers][]" value="write the answer">
   </div>
-  <input name="questions[][question_type]" style="display: none" value="2">
+  <input name="questions[][question_type]" style="display: none" value="textbox">
 </div>
