added button to destroy new question while creating page

--- a/app/views/questions/_checkbox_question_fields.html.erb
+++ b/app/views/questions/_checkbox_question_fields.html.erb
@@ -1,4 +1,5 @@
 <div class="question-fields">
+  <p class="btn btn-outline-danger destroy_link">delete</p>
   <input name="questions[][content]" value="question content">
   <div class="answers"></div>
   <p class="btn btn-outline-danger add-answer" type="checkbox" id="add-answer">Add answer</p>
