--- a/app/views/questions/_textbox_question_fields.html.erb
+++ b/app/views/questions/_textbox_question_fields.html.erb
@@ -1,4 +1,5 @@
 <div class="question-fields">
+  <p class="btn btn-outline-danger destroy_link">delete</p>
   <input name="questions[][content]" value="question content">
   <div class="answers">
     <input type="text" name="answer_list[][answers][0]" value="this is a textbox question" style="display: none">
