--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -12,8 +12,8 @@
 <p>Author: <%= @course.owner.instance_of?(User) ? "#{@course.owner.profile.name} #{@course.owner.profile.surname}" : @course.owner.name %></p>
 
 <% if user_signed_in? %>
-  <%= render partial: 'courses/enroll_button', locals: { course: @course, participation: @participation } %>
-  <% if !@course.archived? %>
+  <%= render partial: 'courses/enroll_button', locals: { course: @course, participation: @participation } unless @course.in?(current_user.completed_courses) %>
+  <% unless @course.archived? %>
     <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-md btn-warning' if policy(@course).edit? %>
     <% if current_user.admin? || @course.owner?(current_user) && !@course.published? %>
       <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' %>
