fixed bug with empty question list

--- a/app/views/pages/_edit_test.html.erb
+++ b/app/views/pages/_edit_test.html.erb
@@ -1,24 +1,20 @@
-<%- all_answered = @page.all_questions_answered_by?(current_user) %>
-<% unless questions.empty? %>
   <%= form_tag store_answers_course_path(@course, @page), method: :post, remote: true do %>
     <div class="form-group">
       <% questions.includes(:answer_list).each do |question| %>
         <%- answers = question.answer_list %>
-        <%- user_answers = question.user_answers.find_by(user: current_user) %>
-        <%= render inline: render_question_form(question, answers, user_answers) %>
+        <%= render inline: render_question_form(question, answers) %>
     <% end %>
     </div>
     <div class="questions"></div>
     <div class="form-actions">
-      <%= submit_tag('Save answers', class: 'btn btn-md btn-success', id: 'submit-answers-button') unless all_answered %>
+      <%= submit_tag('Save answers', class: 'btn btn-md btn-success', id: 'submit-answers-button') %>
     </div>
   <% end %>
-<% end %>
 <div class="navigation-buttons">
   <% if @page.previous_page %>
     <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
   <% end %>
-  <% if all_answered && @page.next_page %>
+  <% if @page.next_page %>
     <%= link_to 'Next page', page_course_path(@course, @page.next_page), class: 'btn btn-md btn-primary float-right' %>
   <% end %>
 </div>
