--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -8,7 +8,7 @@
           <%= form.input :html, as: :ckeditor, label: false, input_html: { ckeditor: { toolbar: 'Full' } }  %>
         </div>
         <div class="test-display">
-          <%= render partial: 'pages/edit_test', locals: { questions: @questions, answers: @answers, user_answers: @user_answers } %>
+          <%= render partial: 'pages/edit_test', locals: { questions: @questions, answers: @answers } %>
         </div>
         <div class="form-actions">
           <%= form.button :submit, 'Save changes', class: 'btn btn-md btn-primary' %>
