Changed organizations sort.

--- a/app/views/organizations/_sort_list.html.erb
+++ b/app/views/organizations/_sort_list.html.erb
@@ -8,7 +8,7 @@
           <%= f.input :sort_by, label: 'Sort by', collection: @sort_by, include_blank: false, required: false %>
         </div>
         <div class="col-md-4">
-          <%= f.input :direction, label: nil, collection: {▲: 'asc', ▼: 'desc'}, include_blank: false, required: false %>
+          <%= f.input :direction, label: nil, collection: {'￪': 'asc', '￬': 'desc'}, include_blank: false, required: false %>
         </div>
       </div>
 
