--- a/app/views/courses/_card.html.erb
+++ b/app/views/courses/_card.html.erb
@@ -1,24 +1,31 @@
 <% @courses.each do |course| %>
-  <div class="card mb-3">
-    <%= image_tag course.image.content.url, class: 'card-img-top', width: '781', height: '180' %>
-    <div class="card-body">
-      <h5 class="card-title"><%= course.name %></h5>
-      <p class="card-text"><%= course.description %></p>
-      <div class="row">
-        <div class="col-md-8">
-          <p class="card-text">
+  <div class="card">
+    <div class="card-body row">
+      <%= image_tag course.image.content.url, class: 'card-img-top col-4' %>
+      <div class="col-1"></div>
+      <div class="content col">
+        <div class="row">
+          <div class="col-7"></div>
+          <p class="card-text col-5">
             <small class="text-muted">Created at
               <%= course.created_at.strftime("%b %d, %Y") %></small>
           </p>
         </div>
-        <div class="col-md-1">
-          <i class="fas fa-star">10</i>
-        </div>
-        <div class="col-md-1">
-          <i class="fas fa-user"><%= course.completion_records.count %></i>
-        </div>
-        <div class="col-md-2">
-          <%= link_to 'More', course_path(course), class: 'btn btn-primary' %>
+        
+        <h3 class="card-title row"><%= course.name %></h3>
+        <p class="card-text row h-50"><%= course.description %></p>
+          
+        <div class="row">
+          <div class="col-5"></div>
+          <div class="col-md-2">
+            <i class="fas fa-star">10</i>
+          </div>
+          <div class="col-md-2">
+            <i class="fas fa-user"><%= course.completion_records.count %></i>
+          </div>
+          <div class="col-md-3">
+            <%= link_to 'More', course_path(course), class: 'btn btn-primary' %>
+          </div>
         </div>
       </div>
     </div>
