--- a/app/views/courses/_sort_menu.html.erb
+++ b/app/views/courses/_sort_menu.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for :sort, remote: true, url: courses_sortable_path, method: :get do |f| %>
   <div class="form-row">
     <div class="col-md-8">
-      <%= f.input :sort_by, label: 'Sort by', collection: [], include_blank: false, required: false %>
+      <%= f.input :sort_by, label: 'Sort by', collection: @sort_by, include_blank: false, required: false %>
     </div>
     <div class="col-md-4">
       <%= f.input :direction, label: nil, collection: {'￪': 'asc', '￬': 'desc'},
