--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,32 +1,48 @@
-  <%= form_for :search, url: search_path, method: :get do |form| %>
+  <%= form_for :search, url: search_path, method: :get do |form| %> 
     <fieldset>
       <legend>Search</legend>
+
       <div class='form-group'>
-        
-        <%= form.text_field :query, value: params[:search].presence && params[:search][:query], class: 'form-control' %>
+        <%= form.text_field :query, value: params[:search].presence && params[:search][:query],
+          class: 'form-control' %>
+      </div>
+      
+      <div class='form-group'>
+        <%= form.label :difficulty %><br />
+        <%= select_tag 'difficulty', options_for_select(@difficulties),
+         multiple: true, class: 'form-control', id: 'search-difficulty' %>
       </div>
 
-      <%= form.submit 'Will find',  class: 'btn btn-success' %>
-  
+      <div class='form-group'>
+        <%= form.label :owner %><br />
+        <%= select_tag 'owner', options_for_select(@owners),
+        multiple: true, class: 'form-control', id: 'search-owner' %>
+      </div>
+
+      <div class='form-group'> 
+        <%= form.submit 'Try',  class: 'btn btn-success form-control' %>
+      </div>
+
     </fieldset>
   <% end %>
+
 <% unless @results.nil? %>
   <% if @results.empty? %>
     <h4>No results</h4>
   <% else %>
     <h4>Results</h4>
-      <div class="container-fluid">
+      <div class='container-fluid'>
         <% @results.each do |result| %>
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-12">
+        <div class='row'>
+          <div class='col-lg-4 col-md-4 col-sm-12'>
             <h5 class='text-center'>Name of course: <%= result.name %></h5><br />
-            <div class="panel-stub">
+            <div class='panel-stub'>
               Difficulty: <%= result.difficulty %><br />
               Owner of course: <%= result.owner_for_elastic %><br />
               Course duration: <%= result.duration %><br />
               Status: <%= result.status %><br />
               <% if result.description %>
-                <h6 class="text-center">Description</h6>
+                <h6 class='text-center'>Description</h6>
                 <p><%= result.description.truncate(150) %></p>
               <% end %>
             </div>
