--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,20 +3,20 @@
       <legend>Search</legend>
 
       <div class='form-group'>
-        <%= form.text_field :query, value: params[:search].presence && params[:search][:query],
-          class: 'form-control' %>
+        <%= form.text_field :query,
+          class: 'form-control', id: 'main-search', autocomplete: "false"  %>
       </div>
       
       <div class='form-group'>
         <%= form.label :difficulty %><br />
         <%= select_tag 'difficulty', options_for_select(@difficulties),
-         multiple: true, class: 'form-control', id: 'search-difficulty' %>
+         multiple: true, class: 'form-control', id: 'difficulty-search' %>
       </div>
 
       <div class='form-group'>
         <%= form.label :owner %><br />
         <%= select_tag 'owner', options_for_select(@owners),
-        multiple: true, class: 'form-control', id: 'search-owner' %>
+        multiple: true, class: 'form-control', id: 'owner-search' %>
       </div>
 
       <div class='form-group'> 
@@ -34,7 +34,7 @@
       <div class='container-fluid'>
         <% @results.each do |result| %>
         <div class='row'>
-          <div class='col-lg-4 col-md-4 col-sm-12'>
+          <div class='col-lg-4 col-md-4 col-sm-12 strong-high'>
             <h5 class='text-center'>Name of course: <%= result.name %></h5><br />
             <div class='panel-stub'>
               Difficulty: <%= result.difficulty %><br />
@@ -44,7 +44,7 @@
               <% if result.description %>
                 <h6 class='text-center'>Description</h6>
                 <p><%= result.description.truncate(150) %></p>
-              <% end %>
+              <% end %>              
             </div>
           </div>
         </div>
@@ -52,3 +52,4 @@
     </div>
   <% end %>
 <% end %>
+
