--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,6 @@
 @import "user_dashboard";
 @import "select2";
 @import "select2-bootstrap";
+@import 'slick';
+@import 'slick-theme';
+@import "home";
