--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,6 +2,9 @@
   Course "<%= @course.name %>"
   <% if user_signed_in? %>
       <%= render partial: 'courses/favorite_button', locals: { course: @course, user: current_user } %>
+      <% if Participation.find_by(user: current_user, course: @course) %>
+        <input type="text" class="slider" value="" data-slider-min="-20" data-slider-max="20" data-slider-step="1" data-slider-value="-14" data-slider-orientation="vertical" data-slider-selection="after"data-slider-tooltip="hide">
+      <% end %>
   <% end %>
 </h1>
 
@@ -23,3 +26,7 @@
   <% end %>
 <% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
+
+<script>
+  $('.slider').slider()
+</script>
