--- a/app/views/courses/rating.js.erb
+++ b/app/views/courses/rating.js.erb
@@ -3,7 +3,7 @@ var ratingVal = $('#rating').val()
 if (ratingVal == undefined) {
   $('#rating-link').text('Rate course ￪')
   var rating = $('.rating-div')
-  rating.append('<%= j render partial: "rating", locals: {user: current_user, course: @course} %>');
+  rating.append('<%= j render partial: "rating" %>');
   var slider = new Slider("#rating");
   slider.on("slide", function(sliderValue) {
     document.getElementById("rating-val").textContent = sliderValue;
