fixed bug with radio buttons

--- a/app/views/pages/_add_question.html.erb
+++ b/app/views/pages/_add_question.html.erb
@@ -1,4 +1,5 @@
 <div class="question-buttons">
+  <input name="counter" id="question-counter" value="<%= counter %>>" disabled="disabled" class="d-none"/>
   <%= form_tag '/questions/add', method: :post, remote: true, class: 'render_form' do %>
     <input name="type" value="0" style="display: none">
     <%= submit_tag 'Create textbox question', class: 'btn btn-md btn-primary' %>
