--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -23,7 +23,7 @@
           <%= link_to 'Back', pages_course_path(@course), class: 'btn btn-md btn-secondary' %>
         </div>
       <% end %>
-        <%= render partial: 'add_question' %>
+        <%= render partial: 'add_question', locals: { counter: 0 } %>
     </div>
   </div>
 </div>
