--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,7 +16,7 @@
       <div class='form-group'>
         <%= form.label :owner %><br />
         <%= select_tag 'owner', options_for_select(@owners),
-        multiple: true, class: 'form-control', id: 'owner-search' %>
+        class: 'form-control', id: 'owner-search' %>
       </div>
 
       <div class='form-group'> 
