--- a/app/views/courses/_rating.html.erb
+++ b/app/views/courses/_rating.html.erb
@@ -1,4 +1,30 @@
-<h3 class='rating-h3'>Rating: 
-  <input id="rating" type="text" data-slider-min="-10" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
-  <span id="rating-val">0</span>
-</h3>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Rating</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class='col'>
+            <h6>Rate the course, please</h6>
+            <h2 class="modal-body" id="rating-div">
+              <i class="fas fa-angry" id="rating-angry"></i>
+              <input id="rating" type="text" data-slider-handle="square" data-slider-min="-10"
+                     data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
+              <i class="fas fa-grin-beam" id="rating-grin"></i>
+              <p id="rating-val">0</p>
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= link_to 'Save changes', course_rating_path(course), method: :patch, remote: true, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+</div>
