--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,8 +14,12 @@
 
 <% if user_signed_in? %>
   <% if !@course.archived? && Participation.find_by(user: current_user, course: @course) %>
-    <%= link_to 'Rate course ￬', course_rating_path(@course), remote: true, id: 'rating-link' %>
-    <div class='rating-div'></div>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="rating-btn">
+      Rate course
+    </button>
+    <div id="rating-window">
+      <%= render partial: 'courses/rating', locals: { course: @course } %>
+    </div>
   <% end %>
   <%= render partial: 'courses/enroll_button', locals: { course: @course, participation: @participation } %>
   <% if !@course.archived? %>
@@ -27,3 +31,13 @@
   <% end %>
 <% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
+
+<script>
+var slider = new Slider("#rating");
+  slider.on("slide", function(sliderValue) {
+    document.getElementById("rating-val").textContent = sliderValue;
+  });
+  slider.on("change", function(sliderValue) {
+    document.getElementById("rating-val").textContent = sliderValue.newValue;
+  });
+</script>
