Added rate course action.

--- a/app/views/courses/_rating.html.erb
+++ b/app/views/courses/_rating.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <%= link_to 'Save changes', course_rating_path(course), method: :patch, remote: true, class: 'btn btn-primary' %>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="rating-submit">Save changes</button>
       </div>
     </div>
   </div>
