Fixed average rating bug, changed smile icons.

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -7,12 +7,12 @@
   margin: auto;
 }
 
-#rating-angry {
+#rating-frown {
   margin-right: 2%;
   color: red;
 }
 
-#rating-grin {
+#rating-smile {
   margin-left: 2%;
   color: green;
 }
