--- a/app/views/courses/_rating.html.erb
+++ b/app/views/courses/_rating.html.erb
@@ -12,10 +12,10 @@
           <div class='col'>
             <h6>Rate the course, please</h6>
             <h2 class="modal-body" id="rating-div">
-              <i class="fas fa-angry" id="rating-angry"></i>
+              <i class="fas fa-frown" id="rating-frown"></i>
               <input id="rating" type="text" data-slider-handle="square" data-slider-min="-10"
                      data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
-              <i class="fas fa-grin-beam" id="rating-grin"></i>
+              <i class="fas fa-smile" id="rating-smile"></i>
               <p id="rating-val">0</p>
             </h2>
           </div>
