--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,7 +14,7 @@
 <% if user_signed_in? %>
   <%= render partial: 'courses/enroll_button', locals: { course: @course, participation: @participation } unless @course.in?(current_user.completed_courses) %>
   <% unless @course.archived? %>
-    <%= link_to 'Back to course', page_course_path(@course, @participation.page), class: 'btn btn-md btn-primary' if @course.in?(current_user.enrolled_courses) %>
+    <%= link_to 'Back to course', page_course_path(@course, @participation.page), class: 'btn btn-md btn-primary' if @course.in?(current_user.enrolled_courses) && @participation.page %>
     <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-md btn-warning' if policy(@course).edit? %>
     <% if current_user.admin? || @course.owner?(current_user) && !@course.published? %>
       <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' %>
