--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -16,10 +16,10 @@
   <% unless @course.archived? %>
     <%= link_to 'Back to course', page_course_path(@course, @participation.page), class: 'btn btn-md btn-primary' if @course.in?(current_user.enrolled_courses) && @participation.page %>
     <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-md btn-warning' if policy(@course).edit? %>
-    <% if current_user.admin? || @course.owner?(current_user) && !@course.published? %>
-      <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' %>
+    <% if current_user.admin? || @course.owner?(current_user) %>
+      <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' if !@course.published? && !@course.pages.empty? %>
+      <%= link_to 'To pages', pages_course_path(@course), class: 'btn btn-info btn-md' %>
     <% end %>
-    <%= link_to 'To pages', pages_course_path(@course), class: 'btn btn-info btn-md' %>
   <% end %>
 <% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
